<resources>
    <string name="app_name">Find a Movie</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="more">More</string>
    <string name="detailsAndMore">Details &amp; More</string>
    <string name="movies">Movies</string>
    <string name="tvShows">TV Shows</string>
    <string name="persons">Persons</string>

    <string name="searchHint">Movies, TV Shows, Persons</string>
    <string name="nowPlayingMovie">Now Playing</string>
    <string name="upcoming">Upcoming Movies</string>
    <string name="popularMovies">Popular Movies</string>
    <string name="topRatedMovies">Top Rated Movies</string>
    <string name="popularTVShows">Popular TV Shows</string>
    <string name="topRatedTVShows">Top Rated TV Shows</string>
    <string name="similarMovies">Similar Movies:</string>
    <string name="similarTVShows">Similar TV Shows:</string>
    <string name="reviews">Reviews:</string>

    <string name="releaseDate">Release date:</string>
    <string name="votes">votes</string>
    <string name="country">Country:</string>
    <string name="seasons">Seasons:</string>

    <string-array name="movieSpinner">
        <item>Now Playing Movies</item>
        <item>Upcoming Movies</item>
        <item>Top Rated Movies</item>
        <item>Popular Movies</item>
    </string-array>
    <string-array name="tvShowSpinner">
        <item>Popular TV-Shows</item>
        <item>Top Rated TV-Shows</item>
    </string-array>
</resources>