<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/moviesListFragment"
        android:enabled="true"
        android:icon="@drawable/style_ic_movie"
        android:title="@string/movies" />
    <item
        android:id="@+id/TVShowsListFragment"
        android:enabled="true"
        android:icon="@drawable/style_ic_tv_show"
        android:title="@string/tvShows" />
    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/favorite_toggle_button_background"
        android:title="@string/favorites" />

</menu>