<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".presentation.screens.search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="40dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            app:cardBackgroundColor="@color/third_background"
            app:cardCornerRadius="6dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:contentDescription="@null"
                android:elevation="1dp"
                android:src="@drawable/ic_search"
                app:tint="@color/gray_3" />

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/third_background"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/searchHint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="45dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_3"
                app:fontFamily="@font/raleway_medium" />

            <ImageView
                android:id="@+id/btnClear"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:contentDescription="@null"
                android:elevation="1dp"
                android:src="@drawable/ic_close"
                app:tint="@color/gray_3" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/movies"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/moviesRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_movie_simple" />

        <TextView
            android:id="@+id/tvTVShows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/tvShows"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tvShowsRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_movie_simple" />

        <TextView
            android:id="@+id/tvPersons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/persons"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/personsRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_movie_simple" />
    </LinearLayout>

</ScrollView>