<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".presentation.screens.movie_details.MovieDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/third_background">

            <ProgressBar
                android:id="@+id/videoProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:visibility="invisible" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="110dp"
                android:layout_height="165dp"
                android:layout_margin="15dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/movieImg"
                    android:layout_width="110dp"
                    android:layout_height="165dp"
                    android:contentDescription="@null"
                    android:src="@drawable/image_loading" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/favoriteToggleBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/cardView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Avengers" />

            <ToggleButton
                android:id="@+id/favoriteToggleBtn"
                style="@style/FavoriteToggleButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/red"
                app:layout_constraintStart_toEndOf="@id/cardView"
                app:layout_constraintTop_toBottomOf="@id/movieTitle">

                <TextView
                    android:id="@+id/movieRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="3dp"
                    android:paddingBottom="4dp"
                    android:textStyle="bold"
                    tools:text="7.8" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/totalVotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/cvRating"
                app:layout_constraintTop_toTopOf="@id/cvRating"
                tools:text="4329" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/votes"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/totalVotes"
                app:layout_constraintStart_toEndOf="@id/totalVotes"
                app:layout_constraintTop_toTopOf="@id/totalVotes" />

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/releaseDate"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/cardView"
                app:layout_constraintTop_toBottomOf="@id/cvRating" />

            <TextView
                android:id="@+id/movieReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="@id/tvReleaseDate"
                app:layout_constraintStart_toEndOf="@id/tvReleaseDate"
                app:layout_constraintTop_toTopOf="@id/tvReleaseDate"
                tools:text="22-04-2022" />

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/country"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/cardView"
                app:layout_constraintTop_toTopOf="@id/movieCountries" />

            <TextView
                android:id="@+id/movieCountries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvCountry"
                app:layout_constraintTop_toBottomOf="@id/movieReleaseDate"
                tools:text="USA, Germany, France, United States of America" />

            <TextView
                android:id="@+id/tvSeasons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/seasons"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/cardView"
                app:layout_constraintTop_toBottomOf="@id/movieCountries" />

            <TextView
                android:id="@+id/numberOfSeasons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/tvSeasons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvSeasons"
                app:layout_constraintTop_toTopOf="@id/tvSeasons"
                tools:text="10" />

            <TextView
                android:id="@+id/movieTagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView"
                tools:text="Lorem Ipsum has been the industry\'s standard dummy text " />

            <TextView
                android:id="@+id/movieOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="6"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieTagline"
                tools:text="Lorem Ipsum has been the industry\'s standard dummy text " />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvSimilar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/similarMovies"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similarRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_movie_simple" />

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/reviews"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>